# wgpu_learnwgpu

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  wgpu_learnwgpu.js  wgpu_learnwgpu_bg.wasm
res/: cube.mtl
src/: camera.rs  draft.rs  lib.rs  main.rs  model.rs  resources.rs  texture.rs
src/shaders/: triangle_input.wgsl  triangle_pink.wgsl  vertex.wgsl
