[package]
name = "wgpu_learnwgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
## dependecies for WASM
cfg-if = "1.0.0"
##
winit = "0.27.5"
wgpu = "0.14.2"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["time"]}
log = "0.4"
pollster = "0.2.5"
image = { version = "0.24.5", features = [ "png", "jpeg" ], default-features = false }
anyhow = "1.0.68"
bytemuck = { version = "1.12.3", features = [ "derive" ] }
cgmath = "0.18.0"
tobj = { version = "3.2.3", features = [ "async" ]}
instant = "0.1.12"



[build-dependencies]
anyhow = "1.0.68"
fs_extra = "1.2.0"
glob = "0.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = "0.11.14"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14.2", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
